[gd_scene load_steps=40 format=2]

[ext_resource path="res://others/fonts/A Dripping Marker.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pictures/Rochas.png" type="Texture" id=3]
[ext_resource path="res://pictures/PMB.png" type="Texture" id=4]
[ext_resource path="res://pictures/Obaseki.png" type="Texture" id=5]
[ext_resource path="res://pictures/Nnamdi.png" type="Texture" id=6]
[ext_resource path="res://pictures/Lai.png" type="Texture" id=7]
[ext_resource path="res://pictures/Ikpeazu.png" type="Texture" id=8]
[ext_resource path="res://pictures/Akpabio.png" type="Texture" id=9]
[ext_resource path="res://pictures/Wike.png" type="Texture" id=10]
[ext_resource path="res://pictures/Buratai.png" type="Texture" id=11]
[ext_resource path="res://pictures/FemiFani.png" type="Texture" id=12]
[ext_resource path="res://pictures/BMB.png" type="Texture" id=13]
[ext_resource path="res://pictures/Amaechi.png" type="Texture" id=14]
[ext_resource path="res://pictures/Osinbajo.png" type="Texture" id=15]
[ext_resource path="res://pictures/Fashola.png" type="Texture" id=16]
[ext_resource path="res://pictures/Reno.png" type="Texture" id=17]
[ext_resource path="res://pictures/Tinubu.png" type="Texture" id=18]
[ext_resource path="res://pictures/Saraki.png" type="Texture" id=19]
[ext_resource path="res://others/characterselectscreen/CharacterSelectScreen.gd" type="Script" id=20]
[ext_resource path="res://pictures/FSars.png" type="Texture" id=21]
[ext_resource path="res://pictures/Yahooboy.png" type="Texture" id=22]
[ext_resource path="res://pictures/LazyYouth.png" type="Texture" id=23]
[ext_resource path="res://pictures/DSS.png" type="Texture" id=24]
[ext_resource path="res://main_menu_image2.png" type="Texture" id=25]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.419608, 0.603922, 0.352941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 34
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 0.576471, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 34
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.490196 )
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=11]
size = 80
outline_size = 3
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 38
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="Animation" id=14]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/Control/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="CharacterSelectScreen" type="TextureRect"]
self_modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 25 )
expand = true
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 720.0
rect_min_size = Vector2( 160, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control"]
margin_right = 55.0
margin_bottom = 40.0
rect_min_size = Vector2( 110, 0 )
custom_constants/margin_top = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HBoxContainer/Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 30 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 864.0
margin_bottom = 720.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -37.5
margin_right = 360.0
margin_bottom = 37.5
rect_min_size = Vector2( 360, 60 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.419608, 0.603922, 0.352941, 1 )
custom_colors/font_color_shadow = Color( 0.419608, 0.603922, 0.352941, 1 )
text = "who will take on corruption ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 700.0
margin_bottom = 610.0
rect_min_size = Vector2( 700, 500 )
custom_styles/selected_focus = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/icon_margin = 20
items = [ "Akpabio", ExtResource( 9 ), false, "Amaechi", ExtResource( 14 ), false, "BM Bruce", ExtResource( 13 ), false, "Buratai", ExtResource( 11 ), false, "DSS", ExtResource( 24 ), false, "Fashola", ExtResource( 16 ), false, "Femi Fani", ExtResource( 12 ), false, "F. Sars", ExtResource( 21 ), false, "Ikpeazu", ExtResource( 8 ), false, "Lai", ExtResource( 7 ), false, "Lazy youth", ExtResource( 23 ), false, "Nnamdi", ExtResource( 6 ), false, "Obaseki", ExtResource( 5 ), false, "Osinbajo", ExtResource( 15 ), false, "PMB", ExtResource( 4 ), false, "Reno", ExtResource( 17 ), false, "Rochas", ExtResource( 3 ), false, "Saraki", ExtResource( 19 ), false, "Tinubu", ExtResource( 18 ), false, "Wike", ExtResource( 10 ), false, "Yahoo boy", ExtResource( 22 ), false ]
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 614.0
margin_right = 700.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 868.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -40.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HBoxContainer/Control2/MarginContainer"]
visible = false
margin_right = 145.0
margin_bottom = 43.0
rect_min_size = Vector2( 70, 30 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 554.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/Control2/VBoxContainer"]
margin_right = 240.0
margin_bottom = 400.0
rect_min_size = Vector2( 240, 400 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Naija
Kombat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer/Control2/VBoxContainer"]
visible = false
margin_top = 404.0
margin_right = 240.0
margin_bottom = 554.0
rect_min_size = Vector2( 0, 102 )
custom_fonts/font = SubResource( 12 )
text = "defeat mens
in story mode
to unlock them"
align = 1
valign = 1
autowrap = true

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
rect_min_size = Vector2( 360, 640 )
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPreview" type="Viewport" parent="HBoxContainer/Control2/ViewportContainer"]
size = Vector2( 360, 640 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="HBoxContainer/Control2/ViewportContainer/CharacterPreview"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 2 )
current = true

[node name="OmniLight" type="OmniLight" parent="HBoxContainer/Control2/ViewportContainer/CharacterPreview"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 1.5 )
light_energy = 3.0
omni_range = 10.0

[node name="UnlockNotice" type="Label" parent="HBoxContainer/Control2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -75.0
margin_right = 206.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 150 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 9 )
text = "defeat this character in story mode to unlock him."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "entry"
anims/entry = SubResource( 14 )
anims/ingame = SubResource( 15 )
next/entry = "ingame"

[connection signal="pressed" from="HBoxContainer/Control/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="HBoxContainer/Control2/MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
